! API: the focused/selected methods of DockableFocusListener/DockStationListener have an additional parameter telling which dockable was focused/selected before the new selection
- API: new listeners (CFocusListener, CKeyboardListener, CDoubleClickListener) which can be added to CDockable (local information) or directly to CControl (global information)
- API: CDockableStateListener, CDockablePropertyListener can now be added to CControl as well.
- Layout: all DockThemes now support FocusTraversalPolicies such that each DockAction and element of a Dockable can be reached
- API: the DockableSelector/DockableSelection allow users to select new Dockables with the keyboard
! API: DockTheme has an additional method getDockableSelection 
- API: the ComponentHierarchyObserver includes now DockTitles in its search for Components
- Bugfix: when using LookAndFeels that could draw window decarations on their own (like JTattoo), then FlapWindow, ScreenDockDialog and others could have decorations. Their JRootPane is now explicitly advised not to have any decorations.
- API: some LookAndFeels use their own scheme how to name colors. With LookAndFeelColors it is now possible to use a specialized algorithm for different LookAndFeels to extract their colors.
- Bugfix: BasicTheme did not update colors for key paint.line, paint.divider and paint.division. Hence the color used to indicate drag and drop elements was black on most systems.
- Bugfix, Layout: The bounds of children of SplitDockStation are now always within the station, rounding errors are cut away.
- Layout: EclipseTheme uses more colors directly from the LookAndFeel.
! API: TabPainter does no longer paint the strip, it now creates an object that paints the strip. That object can now work with the color-map. 
- Bugfix: Focus system could throw a NPE. 
- Layout: colors of the Nimbus LookAndFeel can be extracted under jdk 1.6.0_10