@@ -148,3 +148,4 @@
 ! API: TabPainter does no longer paint the strip, it now creates an object that paints the strip. That object can now work with the color-map. 
 - Bugfix: Focus system could throw a NPE. 
 - Layout: colors of the Nimbus LookAndFeel can be extracted under jdk 1.6.0_10
+- Bugfix: RexTabbedComponent does no longer add and remove children, it uses now a CardLayout. LookAndFeel changes work now also with the EclipseTheme.
